--- a/css/main.css
+++ b/css/main.css
@@ -3,24 +3,55 @@
   padding: 0;
 }
 
-html {
+body {
   background-color: lightblue;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-content: center;
 }
 
 h1, h2 {
   text-align: center;
 }
 
-.btn-div {
+h1 {
+  line-height: 3em;
+}
+
+h2 {
+  line-height: 2em;
+}
+
+p {
+  margin-right: 1em;
+  line-height: 1.5em;
+}
+
+.input-wrapper,
+.output-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+
+.input-div {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   align-self: center;
 }
+
+/*.btn-div, {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}*/
 
 button {
   border: 1px solid black;
@@ -34,7 +65,7 @@ button {
 
 }
 
-#output {
+.output-div {
   width: 60%;
   height: auto;
   text-align: left;
